Fixes ambiguous z-indexes for HUD elements and locks out HUD keys when game is paused.

--- a/gas.css
+++ b/gas.css
@@ -135,6 +135,8 @@ div {
 	color: white;
 
 	font-size: 16pt;
+	
+	z-index: 5;
 }
 
 #prose-text {
@@ -163,6 +165,8 @@ div {
 	background: rgba(0, 0, 0, 0.75);
 	
 	display: none;
+	
+	z-index: 5;
 }
 
 #progress-bar {
@@ -195,6 +199,8 @@ div {
 	background: transparent;
 	
 	display: none;
+	
+	z-index: 5;
 }
 
 /* mouse tracking surface */
